@@ -164,6 +164,7 @@
     <Compile Include="ProcessAuthorFormat.cs" />
     <Compile Include="ProcessSeqFormatString.cs" />
     <Compile Include="Interfaces\ProgressUpdateInterface.cs" />
+    <Compile Include="ProgressUpdateWrapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ElementConverters\SectionConverter.cs" />
     <Compile Include="UnicodeHelpers.cs" />
